--- a/css/dataviz.css
+++ b/css/dataviz.css
@@ -17,3 +17,53 @@ body {
     width: 820px;
     padding:40px !important;
 }
+
+#header {
+    position: fixed;
+    height:90px;
+    border-bottom: solid 1px #ccc;
+    width: 100vw;
+    background: #fff;
+    top: 0;
+    z-index: 3000;
+    left: 0;
+    text-align: center;
+}
+
+#content {
+    margin-top: 100px;
+}
+
+#list-users {
+    position: absolute;
+    right: 0;
+    margin-top: 35px;
+    margin-right: 35px;
+}
+
+.avatar {
+    position: absolute;
+    left: 0;
+    margin-top: 1px;
+}
+
+.avatar img {
+    height: 88px;
+    width: 100px;
+    border-right: solid 1px #ccc;
+}
+
+#user-name {
+    width: auto;
+    margin:auto;
+    margin-top: 35px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 20px;
+}
+
+.no-data {
+    margin-top: 220px;
+    color: #ccc;
+    font-size: 30px;
+}
